<resources>
    <string name="app_name">SmartTecho</string>
    <string name="continuar">Continuar</string>
    <string name="encender">ENCENDER</string>
    <string name="apagar">APAGAR</string>
    <string name="ABRIR">ABRIR TECHO</string>
    <string name="CERRAR">CERRAR TECHO</string>
    <string name="sensorLuz">VALORES DEL SENSOR DE LUZ</string>
    <string name="textview">SMARTECHO</string>
    <string name="textview3">ola</string>
    <string name="textview4">valor</string>
    <string name="eslogan">\" Soluciones Inteligentes \"</string>
    <string name="cerrar_techo">CERRAR TECHO</string>
    <string name="todo">TODO</string>
</resources>